Update installation and deployment guides